@@ -1,3 +1,10 @@
+ENet 1.3.7 (March 6, 2013):
+
+* added ENET_PACKET_FLAG_SENT to indicate that a packet is being freed because it has been sent
+* added userData field to ENetPacket
+* changed how random seed is generated on Windows to avoid import warnings
+* fixed case where disconnects could be generated with no preceding connect event
+
 ENet 1.3.6 (December 11, 2012):
 
 * added support for intercept callback in ENetHost that can be used to process raw packets before ENet
